--- a/index.html
+++ b/index.html
@@ -1490,7 +1490,7 @@
                 <!-- Projet 2 : Générateur d'équipe -->
                 <div class="project-card" tabindex="0">
                     <div class="project-image">
-                        <img src="./Genera.png" alt="Générateur d'équipe">
+                        <img src="./Gener.png" alt="Générateur d'équipe">
                     </div>
                     <div class="project-content">
                         <h3>Générateur d'équipe</h3>
