--- a/index.html
+++ b/index.html
@@ -1451,8 +1451,7 @@
                     <div class="timeline-content">
                         <div class="timeline-date">2020 - 2022</div>
                         <h3>Licence en Informatique</h3>
-                        <p>Université Institut National Supérieur de Sciences et Techniques d'Abéché. Fondamentaux en
-                            algorithmique, structures de données et programmation orientée objet.</p>
+                        <p>Université Adam Barka d'Abéché. Fondamentaux en Informatique Appliquée à la Gestion.</p>
                     </div>
                     <div class="timeline-dot"></div>
                 </div>
