--- a/index.html
+++ b/index.html
@@ -1517,9 +1517,9 @@
                         <h3>Base de données</h3>
                         <p>Un projet de modélisation de base de données consiste à concevoir et à représenter visuellement la structure et les relations des données au sein d'un système d'information. Ce processus implique la création de modèles conceptuels, logiques et physiques.</p>
                         <div class="project-tags">
-                            <span class="project-tag">Bootstrap</span>
-                            <span class="project-tag">HTML</span>
-                            <span class="project-tag">Responsive</span>
+                            <span class="project-tag">Analyse SI</span>
+                            <span class="project-tag">Drawio</span>
+                            <span class="project-tag">MYSQL</span>
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/hadjehaouamahamatissa/Bases_des_Donnees.sql.git" target="_blank"
